# SLPatternRegister

./: .gitignore  CMakeLists.txt  README.md  intensity_functor.cpp  intensity_functor.h  main.cpp
MatlabPart/: ColorReco.m  PatGene.m  data_generation.m  pattern_pro.m
